# iofx

./: README.md  pyproject.toml
examples/: demo.py
examples/weather/: pipeline.py
src/iofx/: detect.py
