[project]
name = "iofx"
version = "0.1.0"
description = "IO effect handlers for Python"
authors = [
    {name = "Louis Maddox", email = "louismmx@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
